istio/istio-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-app-v1
  labels:
    namespace: default
    app: httpd-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-app
  template:
    metadata:
      labels:
        namespace: default
        app: httpd-app
        version: v1
    spec:
      containers:
        - name: httpd-app
          imagePullPolicy: Always
          image: prayags/httpd-app:v1
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-app-v2
  labels:
    namespace: default
    app: httpd-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-app
  template:
    metadata:
      labels:
        namespace: default
        app: httpd-app
        version: v2
    spec:
      containers:
        - name: httpd-app
          imagePullPolicy: Always
          image: prayags/httpd-app:v2
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-app
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    namespace: default
    app: httpd-app

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpd-app
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "web.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpd-app
spec:
  hosts:
  - "web.example.com"
  gateways:
  - httpd-app
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: httpd-app
        port:
          number: 80
        subset: subset-v1
      weight: 50
    - destination:
        host: httpd-app
        port:
          number: 80
        subset: subset-v2
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: httpd-app
spec:
  host: httpd-app
  subsets:
  - name: subset-v1
    labels:
      version: v1
  - name: subset-v2
    labels:
      version: v2
